create class, that converts expression into opn, create function that calculates the result of that expression, create dialog program

--- a/BigInt/CMakeLists.txt
+++ b/BigInt/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.23)
 project(big_int_lib)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -15,4 +15,4 @@ add_library(big_int_lib
 set(CMAKE_PREFIX_PATH "C:\\Qt\\5.15.2\\mingw81_64\\")
 #find_package(Qt5Widgets REQUIRED)
 
-target_link_libraries(big_int_lib Qt5::Widgets)
+target_link_libraries(big_int_lib)
